--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "mz-player-task",
-  "version": "0.1.0",
+  "version": "0.1",
   "private": true,
+  "homepage": "https://maciekz1996.github.io/mz-player-task/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "moment": "^2.27.0",
-    "moment-duration-format": "^2.3.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -22,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "redux-devtools": "^3.6.0"
   }
 }
